fix a banner issue on mobile: directly set the banner transparency

--- a/css/zaba.css
+++ b/css/zaba.css
@@ -12,7 +12,7 @@ t {
     font-family: 'title-font';
     color: #ffffff;
     text-align: center;
-	text-shadow: 0px 0px 10px black;	
+    text-shadow: 0px 0px 5px #0000009e;
     font-size: 50px;
     display: grid;
 }
